--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   <body>
     <canvas id="heart"></canvas>
     <div class="smoke">
-      <span>Be</span>
+      <span>HI</span>
       <span>&nbsp;</span>
       <span>My</span>
       <span>&nbsp;</span>
-      <span>Valentine</span>
+      <span>SWEETHEART</span>
     </div>
 
     <script src="script.js"></script>
